# dcapi-matcher

./: .gitignore  AGENTS.md  Cargo.toml  TODO.md
.github/workflows/: ci.yml
crates/android-credman/: Cargo.toml  README.md
crates/android-credman-sys/: Cargo.toml  README.md
crates/android-credman-sys/src/: lib.rs  test_shim.rs
crates/android-credman/src/: abi.rs  error.rs  host.rs  lib.rs  traits.rs
crates/android-credman/src/input/: app_info.rs  mod.rs  reader.rs  request.rs  version.rs
crates/android-credman/src/structs/: credential_entry.rs  credential_set.rs  credential_slot.rs  field.rs  inline_issuance_entry.rs  matcher_response.rs  mod.rs  package_info.rs  payment_entry.rs  string_id_entry.rs  verification_update.rs
crates/aptitude-consortium-dcapi-matcher/: Cargo.toml  README.md
crates/aptitude-consortium-dcapi-matcher/src/: lib.rs  main.rs
crates/dcapi-dcql/: Cargo.toml  README.md
crates/dcapi-dcql/src/: lib.rs  models.rs  path.rs  planner.rs  store.rs
crates/dcapi-dcql/tests/: dcql_json_suite.rs
crates/dcapi-dcql/tests/cases/: README.md
crates/dcapi-dcql/tests/cases/01_no_credential_sets_all_required/: credentials.json  expected.option.all_satisfiable.prefer_absent.json  expected.option.all_satisfiable.prefer_present.json  request.json
crates/dcapi-dcql/tests/cases/02_required_sets_factorization_optional/: credentials.json  expected.json  expected.option.all_satisfiable.always_present_if_satisfiable.json  expected.option.all_satisfiable.prefer_absent.json  expected.option.first_satisfiable_only.always_present_if_satisfiable.json  expected.option.first_satisfiable_only.prefer_absent.json  expected.option.first_satisfiable_only.prefer_present.json  request.json
crates/dcapi-dcql/tests/cases/03_conditional_outer_alternatives/: credentials.json  expected.option.all_satisfiable.prefer_absent.json  expected.option.all_satisfiable.prefer_present.json  expected.option.first_satisfiable_only.prefer_present.json  request.json
crates/dcapi-dcql/tests/cases/04_unsatisfied_due_to_vct/: credentials.json  request.json
crates/dcapi-dcql/tests/cases/05_invalid_claim_sets_without_claims/: expected.json  expected.option.first_satisfiable_only.prefer_present.json  request.json
crates/dcapi-dcql/tests/cases/06_invalid_claim_sets_missing_claim_id/: expected.json  request.json
crates/dcapi-dcql/tests/cases/07_claim_sets_select_second_option/: expected.option.first_satisfiable_only.always_present_if_satisfiable.json  expected.option.first_satisfiable_only.prefer_present.json  request.json
crates/dcapi-dcql/tests/cases/08_values_filtering/: credentials.json  expected.option.all_satisfiable.prefer_present.json  expected.option.first_satisfiable_only.always_present_if_satisfiable.json  request.json
crates/dcapi-dcql/tests/cases/09_mdoc_invalid_claim_path_unsatisfied/: credentials.json  request.json
crates/dcapi-dcql/tests/cases/10_trusted_authorities_filtering/: credentials.json  expected.option.all_satisfiable.prefer_present.json  expected.option.first_satisfiable_only.prefer_present.json  request.json
crates/dcapi-dcql/tests/cases/11_holder_binding_required_default/: credentials.json  expected.option.all_satisfiable.always_present_if_satisfiable.json  expected.option.first_satisfiable_only.always_present_if_satisfiable.json
crates/dcapi-dcql/tests/cases/12_holder_binding_not_required_allows/: credentials.json  expected.option.all_satisfiable.prefer_present.json  expected.option.first_satisfiable_only.always_present_if_satisfiable.json  request.json
crates/dcapi-dcql/tests/cases/13_vct_extends_chain_matches/: credentials.json  expected.json  expected.option.first_satisfiable_only.prefer_absent.json  request.json
crates/dcapi-dcql/tests/cases/14_optional_set_only_allows_empty/: credentials.json  expected.json  expected.option.all_satisfiable.always_present_if_satisfiable.json  expected.option.all_satisfiable.prefer_absent.json  request.json
crates/dcapi-dcql/tests/cases/15_optional_dedup_when_option_is_forced/: expected.option.all_satisfiable.prefer_present.json  request.json
crates/dcapi-dcql/tests/cases/16_mismatched_meta_for_special_format_rejects/: credentials.json  expected.json  request.json
crates/dcapi-dcql/tests/cases/17_meta_other_allows_any_format/: credentials.json  request.json
crates/dcapi-dcql/tests/cases/18_sdjwt_meta_on_other_format_allowed/: credentials.json  expected.option.first_satisfiable_only.always_present_if_satisfiable.json  request.json
crates/dcapi-dcql/tests/cases/19_empty_credentials_invalid/: expected.json
crates/dcapi-matcher/: Cargo.toml  README.md
crates/dcapi-matcher-macros/: Cargo.toml
crates/dcapi-matcher-macros/src/: lib.rs
crates/dcapi-matcher-tracing/: Cargo.toml
crates/dcapi-matcher-tracing/src/: lib.rs
crates/dcapi-matcher-tracing/tests/: tracing.rs
crates/dcapi-matcher/examples/cm-matcher-format/: Cargo.toml
crates/dcapi-matcher/examples/cm-matcher-format/src/: lib.rs
crates/dcapi-matcher/examples/ubique-matcher-format/: Cargo.toml
crates/dcapi-matcher/examples/ubique-matcher-format/src/: lib.rs
crates/dcapi-matcher/src/: config.rs  diagnostics.rs  engine.rs  error.rs  lib.rs  models.rs  profile.rs  response.rs  traits.rs  ts12.rs
crates/dcapi-matcher/tests/: openid_matcher.rs
docs/: haip-audit.md  openid4vc-high-assurance-interoperability-profile-1_0-04.md  ts12-electronic-payments-SCA-implementation-with-wallet.md
docs/openid_fullspec_bundle_2026-02-13/: INDEX.md  ISO_IEC_18013-5_NOT_INCLUDED.md  OAuth2_Multiple_Response_Types_1.0.txt.md  OpenID4VCI_1.0.md  OpenID4VP_1.0.md  OpenID_Connect_Core_1.0.txt.md  OpenID_Connect_Discovery_1.0.txt.md  OpenID_Connect_Registration_1.0.txt.md  RFC2119_BCP14.md  RFC6749_OAuth2.md  RFC7515_JWS.md  RFC7516_JWE.md  RFC7517_JWK.md  RFC7519_JWT.md  RFC7591_DCR.md  RFC7636_PKCE.md  RFC8174_BCP14.md  RFC8414_OAuthASMetadata.md  RFC9101_JAR.md  RFC9396_RAR.md  RFC9700_OAuthSecurityBCP.md  SIOPv2_1.0.md  W3C_Digital_Credentials_API.md  W3C_VC_Data_Model.md  draft-ietf-oauth-sd-jwt-vc-latest.md  manifest_fixed.json
(+84 files in other folders)
