[workspace]
members = [
    "crates/android-credman",
    "crates/android-credman-sys",
    "crates/aptitude-consortium-dcapi-matcher",
    "crates/dcapi-dcql",
    "crates/dcapi-matcher-macros",
    "crates/dcapi-matcher"
]
resolver = "2"

[workspace.dependencies]
android-credman = { path = "crates/android-credman", version = "0.1.0" }
android-credman-sys = { path = "crates/android-credman-sys", version = "0.1.0" }
dcapi-dcql = { path = "crates/dcapi-dcql", version = "0.1.0" }
dcapi-matcher = { path = "crates/dcapi-matcher", version = "0.1.0" }
dcapi-matcher-macros = { path = "crates/dcapi-matcher-macros", version = "0.1.0" }
base64 = "0.22"
json-schema-validator-core = "1.0.0"
mini-alloc = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
serde = "1.0"
serde_json = "1.0"
spin = "0.9"
syn = { version = "2.0", features = ["full"] }
thiserror = "2.0"
rustc-hash = "2.0"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = 0
overflow-checks = false
incremental = false

[profile.release.package."*"]
opt-level = "z"
