[package]
name = "aptitude-consortium-dcapi-matcher"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
android-credman = { workspace = true }
dcapi-dcql = { workspace = true }
dcapi-matcher = { path = "../dcapi-matcher" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
ciborium = { version = "0.2", default-features = false }
ciborium-io = "0.2"
tracing = { version = "0.1", default-features = false }
