[package]
name = "aptitude-consortium-dcapi-matcher"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
android-credman = { workspace = true }
android-credman-sys = { workspace = true }
dcapi-dcql = { workspace = true }
dcapi-matcher = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
base64 = { workspace = true }
mini-alloc = { workspace = true }
