[package]
name = "dcapi-matcher"
version = "0.1.0"
edition = "2024"

[dependencies]
android-credman = { workspace = true }
dcapi-dcql = { workspace = true }
dcapi-matcher-macros = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
json-schema-validator-core = { workspace = true }
spin = { workspace = true }

[features]
std = []
test-shim = ["android-credman/test-shim", "std"]

[dev-dependencies]
android-credman = { workspace = true, features = ["test-shim"] }
