[package]
name = "cm-matcher-format"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
android-credman = { workspace = true, features = ["test-shim"] }
dcapi-dcql = { workspace = true }
dcapi-matcher = { path = "../.." }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
tracing = { version = "0.1", default-features = false }
