[package]
name = "ubique-matcher-format"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
android-credman = { workspace = true, features = ["test-shim"] }
dcapi-dcql = { workspace = true }
dcapi-matcher = { workspace = true }
serde_json = { workspace = true }
